--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,10 @@ set -g prefix `
 bind-key ` last-window
 bind-key e send-prefix
 
+set-option -sg escape-time 10
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',screen-256color:RGB'
+
 set -g status-position bottom
 set -g status-style fg=colour137,bg=colour234,dim
 set -g status-left ''
@@ -19,5 +23,3 @@ setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244
 setw -g window-status-bell-style bg=colour1,fg=colour255,bold
 
 setw -g mouse on
-
-
