--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,3 +23,5 @@ setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244
 setw -g window-status-bell-style bg=colour1,fg=colour255,bold
 
 setw -g mouse on
+
+set -g history-limit 5000
