--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,27 +1,9 @@
 unbind C-b
 set -g prefix `
 bind-key ` last-window
-bind-key e send-prefix
 
-set-option -sg escape-time 10
-set-option -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',screen-256color:RGB'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g status-position bottom
-set -g status-style fg=colour137,bg=colour234,dim
-set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 20
-
-setw -g window-status-current-style fg=colour81,bg=colour238,bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-
-setw -g window-status-style fg=colour138,bg=colour235,none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-setw -g window-status-bell-style bg=colour1,fg=colour255,bold
-
-setw -g mouse on
-
-set -g history-limit 5000
+run '~/.tmux/plugins/tpm/tpm'
