--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,13 @@
 unbind C-b
 set -g prefix `
 bind-key ` last-window
+setw -g mouse on
 
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 run '~/.tmux/plugins/tpm/tpm'
