--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,5 +1,10 @@
 draw_bold_text_with_bright_colors: true
 
+window:
+  dimensions:
+    columns: 100
+    lines: 30
+
 env:
   TERM: xterm-256color
 
