--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,15 +1,7 @@
-// Zed settings
-//
-// For information on how to configure Zed, see the Zed
-// documentation: https://zed.dev/docs/configuring-zed
-//
-// To see all of Zed's default settings without changing your
-// custom settings, run the `open default settings` command
-// from the command palette or from `Zed` application menu.
 {
-  "ui_font_size": 12,
-  "buffer_font_size": 10,
-  "buffer_font_family": "JetBrainsMono Nerd Font Mono",
+  "ui_font_size": 13,
+  "buffer_font_size": 13,
+  "buffer_font_family": "JetBrainsMono Nerd Font",
   "buffer_line_height": "comfortable",
   "theme": "Ayu Dark",
   "format_on_save": "off",
